--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,1 +1,33 @@
+.footer {
+    background-color: $negro;
+    padding: 0;
+    margin-top: 0;
+    height: 350px;
+}
+    .footer__logo{
+    width:25rem;
+    height: auto;
+    }
 
+    .footer__datos{
+        margin-bottom: 0;
+        margin-right: 1rem;
+        float: right;
+    
+    
+        .footer__item{
+            color: $blanco;
+            font-size: 14px;
+            text-decoration: none;
+            margin-bottom: 10px;
+            display: flex;
+            align-items: center;
+        }    
+    
+        
+        .footer__icon {
+        width: 55px;
+        height: auto;
+    }
+    
+    }
