--- a/css/estilos.css
+++ b/css/estilos.css
@@ -16,7 +16,7 @@
   float: right; }
   .footer__datos .footer__item {
     color: #ffffff;
-    font-size: 14px;
+    font-size: 1.4rem;
     text-decoration: none;
     margin-bottom: 1rem;
     display: flex;
