--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -18,7 +18,7 @@
     
         .footer__item{
             color: $blanco;
-            font-size: 14px;
+            font-size: 1.4rem;
             text-decoration: none;
             margin-bottom: 1rem;
             display: flex;
